# 3d-particle-simulation

./: .gitignore  CMakeLists.txt
shaders/: ground.frag  ground.vert  particle.frag  particle.vert
src/: Camera.cpp  Camera.h  Particle.cpp  Particle.h  Shader.cpp  Shader.h  Sphere.h  constants.h  main.cpp
